# ubuntu_voice_to_text

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  README.md  demo_pipeline.py  docker-compose.yml  docker-entrypoint.sh  download-model.sh  main.py  main_pipeline.py  pyproject.toml  requirements.txt  test-environment.sh  voice_typing.py  voice_typing.sh
.github/workflows/: test.yml
docs/: audio_pipeline_decoupling.md  centralized_configuration.md  output_dispatcher.md  testing_guidelines.md  ui_event_subscriptions.md
docs/interfaces/: README.md  audio_input.md  output_action.md  recognition_source.md  state_manager.md
examples/: custom_recognition_source.py
examples/interfaces/: audio_input_example.py  complete_system_example.py  output_action_example.py  state_manager_example.py
scripts/: docker-entrypoint.sh
tests/: __init__.py  test_audio_overflow_fix.py  test_audio_pipeline.py  test_auto_disable.py  test_auto_disable_simple.py  test_centralized_configuration.py  test_centralized_state_management.py  test_cli_entry_point.py  test_component_decoupling.py  test_interfaces.py  test_mock_integration.py  test_output_dispatcher.py  test_pipeline_integration.py  test_poetry_migration.py  test_recognition_abstraction.py  test_recognition_factory.py  test_smoke.py  test_tray_icon_decoupling.py
tests/test_module_isolation/: __init__.py  test_audio_processor.py  test_config.py  test_global_state.py
voice_typing/: __init__.py  audio_processor.py  config.py  configuration_loader.py  global_state.py  hotkey_manager.py  pipeline_voice_typing.py  tray_icon_manager.py  voice_typing_app.py
voice_typing/interfaces/: __init__.py  audio_input.py  output_action.py  state_manager.py
voice_typing/interfaces/audio_input/: __init__.py  audio_input_source.py  threaded_audio_input_source.py
voice_typing/interfaces/output_action/: __init__.py  callback_output_action_target.py  keyboard_output_action_target.py  multi_output_action_target.py  output_action_target.py  output_dispatcher.py  output_type.py
voice_typing/interfaces/state_manager/: __init__.py  basic_state_manager.py  legacy_state_manager_adapter.py  state_manager.py  state_transition.py  voice_typing_state.py
voice_typing/pipeline/: __init__.py  audio_input.py  coordinator.py  interfaces.py  stages.py
voice_typing/recognition_sources/: __init__.py  base.py  factory.py  vosk_source.py  whisper_source.py
voice_typing/testing/: __init__.py  mocks.py
